[gd_scene load_steps=11 format=2]

[ext_resource path="res://Game/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Temp/bordered_yellow.png" type="Texture" id=2]
[ext_resource path="res://Game/PlayerController.gd" type="Script" id=3]
[ext_resource path="res://Game/UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Temp/tree_placeholder.png" type="Texture" id=5]
[ext_resource path="res://Assets/Temp/rock_placeholder.png" type="Texture" id=6]
[ext_resource path="res://Game/Map.gd" type="Script" id=7]
[ext_resource path="res://Assets/Temp/building_placeholder.png" type="Texture" id=8]
[ext_resource path="res://Game/Game.gd" type="Script" id=12]

[sub_resource type="TileSet" id=1]
0/name = "bordered_yellow.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "building_placeholder.png 1"
1/texture = ExtResource( 8 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "rock_placeholder.png 2"
2/texture = ExtResource( 6 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "tree_placeholder.png 3"
3/texture = ExtResource( 5 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[node name="Node2D" type="Node2D"]
script = ExtResource( 12 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 5000, 5000 )
current = true

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 33, 0, 0, 34, 0, 0, 35, 0, 0, 36, 0, 0, 37, 0, 0, 38, 0, 0, 39, 0, 0, 40, 0, 0, 41, 0, 0, 42, 0, 0, 43, 0, 0, 44, 0, 0, 45, 0, 0, 46, 0, 0, 47, 0, 0, 48, 0, 0, 49, 0, 0, 50, 0, 0, 51, 0, 0, 52, 0, 0, 53, 0, 0, 54, 0, 0, 55, 0, 0, 56, 0, 0, 57, 0, 0, 58, 0, 0, 59, 0, 0, 60, 0, 0, 61, 0, 0, 62, 0, 0, 63, 0, 0, 64, 0, 0, 65, 0, 0, 66, 0, 0, 67, 0, 0, 68, 0, 0, 69, 0, 0, 70, 0, 0, 71, 0, 0, 72, 0, 0, 73, 0, 0, 74, 0, 0, 75, 0, 0, 76, 0, 0, 77, 0, 0, 78, 0, 0, 79, 0, 0, 80, 0, 0, 81, 0, 0, 82, 0, 0, 83, 0, 0, 84, 0, 0, 85, 0, 0, 86, 0, 0, 87, 0, 0, 88, 0, 0, 89, 0, 0, 90, 0, 0, 91, 0, 0, 92, 0, 0, 93, 0, 0, 94, 0, 0, 95, 0, 0, 96, 0, 0, 97, 0, 0, 98, 0, 0, 99, 0, 0, 100, 0, 0, 65536, 0, 0, 65543, 5, 0, 65544, 2, 0, 65545, 5, 0, 65636, 0, 0, 131072, 0, 0, 131172, 0, 0, 196608, 0, 0, 196616, 2, 0, 196617, 5, 0, 196708, 0, 0, 262144, 0, 0, 262146, 5, 0, 262148, 4, 0, 262149, 4, 0, 262150, 5, 0, 262152, 5, 0, 262244, 0, 0, 327680, 0, 0, 327780, 0, 0, 393216, 0, 0, 393316, 0, 0, 458752, 0, 0, 458757, 5, 0, 458852, 0, 0, 524288, 0, 0, 524290, 5, 0, 524294, 5, 0, 524388, 0, 0, 589824, 0, 0, 589827, 5, 0, 589833, 9, 0, 589924, 0, 0, 655360, 0, 0, 655460, 0, 0, 720896, 0, 0, 720996, 0, 0, 786432, 0, 0, 786532, 0, 0, 851968, 0, 0, 852068, 0, 0, 917504, 0, 0, 917604, 0, 0, 983040, 0, 0, 983140, 0, 0, 1048576, 0, 0, 1048676, 0, 0, 1114112, 0, 0, 1114212, 0, 0, 1179648, 0, 0, 1179748, 0, 0, 1245184, 0, 0, 1245284, 0, 0, 1310720, 0, 0, 1310820, 0, 0, 1376256, 0, 0, 1376356, 0, 0, 1441792, 0, 0, 1441892, 0, 0, 1507328, 0, 0, 1507428, 0, 0, 1572864, 0, 0, 1572964, 0, 0, 1638400, 0, 0, 1638500, 0, 0, 1703936, 0, 0, 1704036, 0, 0, 1769472, 0, 0, 1769572, 0, 0, 1835008, 0, 0, 1835108, 0, 0, 1900544, 0, 0, 1900644, 0, 0, 1966080, 0, 0, 1966180, 0, 0, 2031616, 0, 0, 2031716, 0, 0, 2097152, 0, 0, 2097252, 0, 0, 2162688, 0, 0, 2162788, 0, 0, 2228224, 0, 0, 2228324, 0, 0, 2293760, 0, 0, 2293860, 0, 0, 2359296, 0, 0, 2359396, 0, 0, 2424832, 0, 0, 2424932, 0, 0, 2490368, 0, 0, 2490468, 0, 0, 2555904, 0, 0, 2556004, 0, 0, 2621440, 0, 0, 2621540, 0, 0, 2686976, 0, 0, 2687076, 0, 0, 2752512, 0, 0, 2752612, 0, 0, 2818048, 0, 0, 2818148, 0, 0, 2883584, 0, 0, 2883684, 0, 0, 2949120, 0, 0, 2949220, 0, 0, 3014656, 0, 0, 3014756, 0, 0, 3080192, 0, 0, 3080292, 0, 0, 3145728, 0, 0, 3145828, 0, 0, 3211264, 0, 0, 3211364, 0, 0, 3276800, 0, 0, 3276900, 0, 0, 3342336, 0, 0, 3342436, 0, 0, 3407872, 0, 0, 3407972, 0, 0, 3473408, 0, 0, 3473508, 0, 0, 3538944, 0, 0, 3539044, 0, 0, 3604480, 0, 0, 3604580, 0, 0, 3670016, 0, 0, 3670116, 0, 0, 3735552, 0, 0, 3735652, 0, 0, 3801088, 0, 0, 3801188, 0, 0, 3866624, 0, 0, 3866724, 0, 0, 3932160, 0, 0, 3932260, 0, 0, 3997696, 0, 0, 3997796, 0, 0, 4063232, 0, 0, 4063332, 0, 0, 4128768, 0, 0, 4128868, 0, 0, 4194304, 0, 0, 4194404, 0, 0, 4259840, 0, 0, 4259940, 0, 0, 4325376, 0, 0, 4325476, 0, 0, 4390912, 0, 0, 4391012, 0, 0, 4456448, 0, 0, 4456548, 0, 0, 4521984, 0, 0, 4522084, 0, 0, 4587520, 0, 0, 4587620, 0, 0, 4653056, 0, 0, 4653156, 0, 0, 4718592, 0, 0, 4718692, 0, 0, 4784128, 0, 0, 4784228, 0, 0, 4849664, 0, 0, 4849764, 0, 0, 4915200, 0, 0, 4915300, 0, 0, 4980736, 0, 0, 4980836, 0, 0, 5046272, 0, 0, 5046372, 0, 0, 5111808, 0, 0, 5111908, 0, 0, 5177344, 0, 0, 5177444, 0, 0, 5242880, 0, 0, 5242980, 0, 0, 5308416, 0, 0, 5308516, 0, 0, 5373952, 0, 0, 5374052, 0, 0, 5439488, 0, 0, 5439588, 0, 0, 5505024, 0, 0, 5505124, 0, 0, 5570560, 0, 0, 5570660, 0, 0, 5636096, 0, 0, 5636196, 0, 0, 5701632, 0, 0, 5701732, 0, 0, 5767168, 0, 0, 5767268, 0, 0, 5832704, 0, 0, 5832804, 0, 0, 5898240, 0, 0, 5898340, 0, 0, 5963776, 0, 0, 5963876, 0, 0, 6029312, 0, 0, 6029412, 0, 0, 6094848, 0, 0, 6094948, 0, 0, 6160384, 0, 0, 6160484, 0, 0, 6225920, 0, 0, 6226020, 0, 0, 6291456, 0, 0, 6291556, 0, 0, 6356992, 0, 0, 6357092, 0, 0, 6422528, 0, 0, 6422628, 0, 0, 6488064, 0, 0, 6488164, 0, 0, 6553600, 0, 0, 6553601, 0, 0, 6553602, 0, 0, 6553603, 0, 0, 6553604, 0, 0, 6553605, 0, 0, 6553606, 0, 0, 6553607, 0, 0, 6553608, 0, 0, 6553609, 0, 0, 6553610, 0, 0, 6553611, 0, 0, 6553612, 0, 0, 6553613, 0, 0, 6553614, 0, 0, 6553615, 0, 0, 6553616, 0, 0, 6553617, 0, 0, 6553618, 0, 0, 6553619, 0, 0, 6553620, 0, 0, 6553621, 0, 0, 6553622, 0, 0, 6553623, 0, 0, 6553624, 0, 0, 6553625, 0, 0, 6553626, 0, 0, 6553627, 0, 0, 6553628, 0, 0, 6553629, 0, 0, 6553630, 0, 0, 6553631, 0, 0, 6553632, 0, 0, 6553633, 0, 0, 6553634, 0, 0, 6553635, 0, 0, 6553636, 0, 0, 6553637, 0, 0, 6553638, 0, 0, 6553639, 0, 0, 6553640, 0, 0, 6553641, 0, 0, 6553642, 0, 0, 6553643, 0, 0, 6553644, 0, 0, 6553645, 0, 0, 6553646, 0, 0, 6553647, 0, 0, 6553648, 0, 0, 6553649, 0, 0, 6553650, 0, 0, 6553651, 0, 0, 6553652, 0, 0, 6553653, 0, 0, 6553654, 0, 0, 6553655, 0, 0, 6553656, 0, 0, 6553657, 0, 0, 6553658, 0, 0, 6553659, 0, 0, 6553660, 0, 0, 6553661, 0, 0, 6553662, 0, 0, 6553663, 0, 0, 6553664, 0, 0, 6553665, 0, 0, 6553666, 0, 0, 6553667, 0, 0, 6553668, 0, 0, 6553669, 0, 0, 6553670, 0, 0, 6553671, 0, 0, 6553672, 0, 0, 6553673, 0, 0, 6553674, 0, 0, 6553675, 0, 0, 6553676, 0, 0, 6553677, 0, 0, 6553678, 0, 0, 6553679, 0, 0, 6553680, 0, 0, 6553681, 0, 0, 6553682, 0, 0, 6553683, 0, 0, 6553684, 0, 0, 6553685, 0, 0, 6553686, 0, 0, 6553687, 0, 0, 6553688, 0, 0, 6553689, 0, 0, 6553690, 0, 0, 6553691, 0, 0, 6553692, 0, 0, 6553693, 0, 0, 6553694, 0, 0, 6553695, 0, 0, 6553696, 0, 0, 6553697, 0, 0, 6553698, 0, 0, 6553699, 0, 0, 6553700, 0, 0 )
script = ExtResource( 7 )

[node name="PlayerController" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="TurnTimer" type="Timer" parent="PlayerController"]
wait_time = 6.0

[node name="Actor" parent="PlayerController" instance=ExtResource( 1 )]
visible = false
animation = "ZW"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource( 4 )]
visible = false

[node name="FileDialog" type="FileDialog" parent="CanvasLayer"]
margin_right = 1000.0
margin_bottom = 1000.0
window_title = "Open a File"
mode = 0
access = 2
current_dir = "/Users/dding/Documents/Projects/Godot/MM29"
current_path = "/Users/dding/Documents/Projects/Godot/MM29/"

[connection signal="timeout" from="PlayerController/TurnTimer" to="PlayerController" method="_on_Timer_timeout"]
[connection signal="mouse_entered_any" from="CanvasLayer/UI" to="." method="_on_UI_mouse_entered_any"]
[connection signal="mouse_exited_any" from="CanvasLayer/UI" to="." method="_on_UI_mouse_exited_any"]
[connection signal="pause_toggled" from="CanvasLayer/UI" to="PlayerController" method="_on_UI_pause_toggled"]
[connection signal="timeline_changed" from="CanvasLayer/UI" to="PlayerController" method="_on_UI_timeline_changed"]
[connection signal="timeline_interaction" from="CanvasLayer/UI" to="PlayerController" method="_on_UI_timeline_interaction"]
[connection signal="file_selected" from="CanvasLayer/FileDialog" to="PlayerController" method="_on_FileDialog_file_selected"]
